3.4/about/applications.md
---
layout: default
sitemap: false
title: Anwendungen
description: "InGrid: Indexieren, Recherchieren, Visualisieren, Teilen"
---

## Einsatzmöglichkeiten von InGrid

### Einsatz als Umweltinformationportal

InGrid wird für den Aufbau verschiedener Landesumweltportalen eingesetzt. Seine Daten- und Modulstrukturen ermöglichen den Einsatz auf lokaler, regionaler, nationaler und internationaler Ebene.

Einfache Änderungen der Portaloberfläche können durch Anpassung von Stylesheets und den Austausch von Bilddateien vorgenommen werden. Weitergehende Anforderungen an das Layout können durch die Entwicklung eigener Ansichtsprofile realisiert werden.


### Einsatz als Geo-Portal

InGrid unterstützt die von der GDI-DE bzw. von INSPIRE geforderten OGC-Standards für die Recherche (CSW), die Visualisierung (WMS) und den Download (ATOM/WFS) von Geodaten.

Über den eingebauten Kartenklienten können OGC-konforme Kartendienste dargestellt und kombiniert werden. So können die über die Metadatensuche gefundenen Kartendienste direkt angezeigt und analysiert werden.

Mit dem InGridCatalog verfügt die InGrid-Architektur über eine web-basierte leistungsfähige Metadatenerfassungs- und -pflegekomponente, die konform zu den maßgeblichen Standards (ISO 19115/19119, OGC-CSW/WMS, INSPIRE,  GDI-DE-Konventionen) weiter entwickelt wird. Damit erfüllt InGrid alle Kriterien zum Einsatz als Geoportal.


### Einsatz als Intranet GeoPortal

InGrid lässt sich als Intranet Portal verwenden. Mit unterschiedlichen Datenquellenadaptern lassen sich heterogene Datenquellen über eine einheitliche Suche erschließen.

 
### Einsatz als allgemeines Verwaltungsportal

Über InGrid lässt sich zudem ein allgemeines Verwaltungsportal aufbauen. Dabei ist der thematische Fokus nicht auf den Bereich Umwelt eingeschränkt, sondern deckt alle verwaltungsrelevanten Themenbereiche ab. Erforderliche Anpassungen am Layout lassen sich unaufwändig realsieren.
 
### Einsatz als Umweltportal in anderen europäischen Staaten

Auch ein Einsatz außerhalb Deutschlands ist möglich. Die Oberflächen sind vollständig lokalisierbar. Indexierungen können an unterschiedliche Sprachen angepasst werden.

### Einsatz als europäisches Umweltportal

Technisch gesehen unterscheidet sich der Einsatz von InGrid auf europäischer Ebene nur geringfügig von dem auf nationaler Ebene. Die Software ist grundsätzlich so organisiert, dass auch Hierarchiestufen oberhalb der nationalen Ebene abgedeckt werden können.

## InGrid-Installationen bei deutschen Behörden und Institutionen:

### Länderportale

* [MetadatenVerbund (MetaVer) der Länder Brandenburg, Bremen, Hamburg, Sachsen-Anhalt, Mecklenburg-Vorpommern](http://metaver.de/)
* [NUMIS - Niedersächsisches Umweltportal](http://numis.niedersachsen.de/)
* [Saarland - PortalU SL](http://portalu.saarland.de/)
* [Sachsen PortalU - behördliche Umweltinformationen aus Sachsen](http://portalu.smul.sachsen.de/)
* [PortalU Rheinland Pfalz - behördliche Umweltinformationen aus Rheinland Pfalz](http://www.portalu.rlp.de/)
        
### Forschungsportale

* [Forschungsprojekt “Design eines Informationsportals als Forschungsinfrastruktur für Großschutzgebiete - Beispiel: UNESCO MaB Biosphärenreservat Bliesgau”, Umwelt-Campus Birkenfeld (Fachhochschule Trier)](http://forschungsserver.issgeo.org/)
        
### Andere Ressorts

* Amtsinternes Geoportal der Bundesanstalt für IT-Dienstleistungen im Geschäftsbereich des Bundesministeriums für Verkehr und digitale Infrastruktur

		
## InGrid auf EU-Ebene:

* GS Soil Portal: Das europäisches Bodenportal wurde im Rahmen des EU-Projekt GS Soil eingesetzt. (Installation ist nicht mehr online. [Infos können hier eingesehen werden.](http://ec.europa.eu/information_society/apps/projects/factsheet/index.cfm?project_ref=ECP-2008-GEO-318004))